added projects + google verification

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-testing.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU" />
+    <title>Portfolio WIP</title>
+    <link rel="shortcut icon" type="image/x-icon" href="title-icon.png" />
+</head>
+
+<body id="gradient">
+    <h1>projects;</h1>
+    <br>
+    <ol>
+        <li><a href = "https://github.com/mklaso/weather-app" target="_blank"> Weather App  </a></li>
+        <li><a href = "https://github.com/mklaso/gradient-generator" target="_blank"> Colour Gradient Generator </a></li>
+        <li><a href = "https://github.com/mklaso/face-recognition" target="_blank"> Face Recognition </a></li>
+        <li><a href = "https://github.com/mklaso/robo-lads" target="_blank"> Robo Lads </a></li>
+    </ol>
+    <br>
+    <p>work in progress. will be updated w/ styles later.</p>
+
+</body>
+
+</html>
