added github link + logo.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body id="gradient">
-    <h1>projects;</h1>
+    <h1>projects;   
+        <a href = "https://github.com/mklaso" target="_blank"> <img src="github_mark.png"height="18" width="18" alt="github logo"> </a>
+    </h1>
     <br>
     <ol>
         <li><a href = "https://github.com/mklaso/weather-app" target="_blank"> Weather App  </a></li>
