added icon, updated title.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU" />
-    <title>Portfolio WIP</title>
-    <link rel="shortcut icon" type="image/x-icon" href="title-icon.png" />
+    <title>Martin Klasninovski</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/letter_m.png" />
 </head>
 
 <body id="gradient">
     <h1>projects;   
-        <a href = "https://github.com/mklaso" target="_blank"> <img src="github_mark.png"height="18" width="18" alt="github logo"> </a>
+        <a href = "https://github.com/mklaso" target="_blank"> <img src="images/github_mark.png"height="18" width="18" alt="github logo"> </a>
     </h1>
     <br>
     <ol>
