added styling, added resume and removed unnecessary text.

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU" />
     <title>Martin Klasninovski</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/letter_m.png" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="shortcut icon" type="image/x-icon" href="resources/letter_m.ico"/>
 </head>
 
 <body id="gradient">
-    <h1>projects;   
-        <a href = "https://github.com/mklaso" target="_blank"> <img src="images/github_mark.png"height="18" width="18" alt="github logo"> </a>
-    </h1>
-    <br>
-    <ol>
-        <li><a href = "https://github.com/mklaso/weather-app" target="_blank"> Weather App  </a></li>
-        <li><a href = "https://github.com/mklaso/gradient-generator" target="_blank"> Colour Gradient Generator </a></li>
-        <li><a href = "https://github.com/mklaso/face-recognition" target="_blank"> Face Recognition </a></li>
-        <li><a href = "https://github.com/mklaso/robo-lads" target="_blank"> Robo Lads </a></li>
-    </ol>
-    <br>
-    <p>work in progress. will be updated w/ styles later.</p>
+    <header>
+        <h1 id = "name"> Martin Klasninovski </h1>
+        <h2> computer science student </h2>
+        <h3> interested in web design & software development! </h3>
+    </header>
+
+    <div class="main_container">
+        <a href ="https://github.com/mklaso" target="_blank"> <img src="resources/github_mark.png"height="60" width="60" alt="github icon"></a>
+        <a href ="mailto:mklasninovski@gmail.com" target="_blank"> <img src="resources/mail.png" height="60" width="60" alt="mail icon"></a>
+        <a href ="resources/mk_resume.pdf" target="_blank"> <img src="resources/resume.png" height="64" width="64" alt="resume icon"></a>
+    </div>
 
 </body>
 
