--- a/index.html
+++ b/index.html
@@ -1,30 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="google-site-verification" content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="google-site-verification"
+      content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU"
+    />
     <title>Martin Klasninovski</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="shortcut icon" type="image/x-icon" href="resources/letter_m.ico"/>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="resources/letter_m.ico"
+    />
+  </head>
 
-<body id="gradient">
+  <body>
     <header>
-        <h1 id = "name"> Martin Klasninovski </h1>
-        <h2> computer science student </h2>
-        <h3> interested in web design & software development! </h3>
+      <div class="header__logo-box">
+        <!-- <img src="resources/letter_m.ico" alt="Logo" class="header__logo" /> -->
+      </div>
+
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--small">Hi, my name is</span>
+          <span class="heading-primary--main">Martin Klasninovski.</span>
+          <!-- <span class="heading-primary--sub">computer science student</span> -->
+        </h1>
+
+        <!-- <a href="#" class="btn btn--white btn--animated">Resume</a> -->
+      </div>
     </header>
 
-    <div class="main_container">
-        <a href ="https://github.com/mklaso" target="_blank"> <img src="resources/github_mark.png"height="60" width="60" alt="github icon"></a>
-        <a href ="mailto:mklasninovski@gmail.com" target="_blank"> <img src="resources/mail.png" height="60" width="60" alt="mail icon"></a>
-        <a href ="resources/mk_resume.pdf" target="_blank"> <img src="resources/resume.png" height="64" width="64" alt="resume icon"></a>
-    </div>
-
-</body>
-
+    <main>
+      <!-- <div class="main_container">
+        <a href="https://github.com/mklaso" target="_blank">
+          <img
+            src="resources/github_mark.png"
+            height="60"
+            width="60"
+            alt="github icon"
+        /></a>
+        <a href="mailto:mklasninovski@gmail.com" target="_blank">
+          <img src="resources/mail.png" height="60" width="60" alt="mail icon"
+        /></a>
+        <a href="resources/mk_resume.pdf" target="_blank">
+          <img
+            src="resources/resume.png"
+            height="64"
+            width="64"
+            alt="resume icon"
+        /></a>
+      </div> -->
+    </main>
+  </body>
 </html>
