added navbar, fixed image scaling & adjusted text.

--- a/index.html
+++ b/index.html
@@ -12,26 +12,43 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
+      href="https://fonts.googleapis.com/css?family=Inter"
     />
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="resources/letter_m.ico"
+      href="resources/letter-m-5.png"
     />
   </head>
 
   <body>
     <header>
-      <div class="header__logo-box">
-        <!-- <img src="resources/letter_m.ico" alt="Logo" class="header__logo" /> -->
-      </div>
+      <nav>
+        <ul class="navigation">
+          <li><a href="#"></a>About</li>
+          <li><a href="#"></a>Projects</li>
+          <li><a href="#"></a>Contact</li>
+          <li>
+            <a href="resources/resume.pdf" target="_blank" class="btn-resume"
+              >Resume</a
+            >
+          </li>
+        </ul>
+        <div class="navigation__logo-box">
+          <img src="resources/letter-m-5.png" alt="M Logo" />
+        </div>
+      </nav>
 
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--small">Hi, my name is</span>
           <span class="heading-primary--main">Martin Klasninovski.</span>
-          <!-- <span class="heading-primary--sub">computer science student</span> -->
+          <span class="heading-primary--sub"
+            >I am a computer science student based in Ontario, CA
+          </span>
+          <span class="heading-primary--sub"
+            >with an interest in web development.</span
+          >
         </h1>
 
         <!-- <a href="#" class="btn btn--white btn--animated">Resume</a> -->
@@ -50,7 +67,7 @@
         <a href="mailto:mklasninovski@gmail.com" target="_blank">
           <img src="resources/mail.png" height="60" width="60" alt="mail icon"
         /></a>
-        <a href="resources/mk_resume.pdf" target="_blank">
+        <a href="resources/resume.pdf" target="_blank">
           <img
             src="resources/resume.png"
             height="64"
