made adjustments to heading layout.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li>
         </ul>
         <div class="navigation__logo-box">
-          <img src="resources/letter-m-5.png" alt="M Logo" class="clickable-icon" />
+          <img src="resources/letter-m-5.png" alt="M Logo" class="clickable-icon logo-icon" />
         </div>
       </nav>
 
@@ -45,9 +45,9 @@
           <span class="heading-primary--small">Hi, my name is</span>
           <span class="heading-primary--main">Martin Klasninovski.</span>
           <div class="u-margin-top-small">
-            <span class="heading-primary--sub"
+            <!-- <span class="heading-primary--sub"
               >I am a computer science student with an interest in web development, based in Ontario, CA.
-            </span>
+            </span> -->
           </div>
         </h1>
         <div class="header__icon-box">
@@ -58,7 +58,7 @@
            </li>
               <li>
                 <a href="mailto:mklasninovski@gmail.com" target="_blank">
-                    <img src="resources/mail.png" alt="mail icon" class="clickable-icon">
+                    <img src="resources/mail.png" alt="mail icon" class="clickable-icon mail-icon">
                 </a>
             </li>
         </div>
