--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU"
     />
     <title>Martin Klasninovski</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Inter"
@@ -35,7 +35,7 @@
           </li>
         </ul>
         <div class="navigation__logo-box">
-          <img src="resources/letter-m-5.png" alt="M Logo" class="clickable-icon logo-icon" />
+          <img src="resources/m-logo.png" alt="M Logo" class="clickable-icon logo-icon" />
         </div>
       </nav>
 
@@ -45,23 +45,8 @@
           <span class="heading-primary--small">Hi, my name is</span>
           <span class="heading-primary--main">Martin Klasninovski.</span>
           <div class="u-margin-top-small">
-            <!-- <span class="heading-primary--sub"
-              >I am a computer science student with an interest in web development, based in Ontario, CA.
-            </span> -->
           </div>
         </h1>
-        <div class="header__icon-box">
-            <li>
-                <a href="https://github.com/mklaso" target="_blank">
-                    <img src="resources/github_mark.png" alt="github icon" class="clickable-icon">
-                </a>
-           </li>
-              <li>
-                <a href="mailto:mklasninovski@gmail.com" target="_blank">
-                    <img src="resources/mail.png" alt="mail icon" class="clickable-icon mail-icon">
-                </a>
-            </li>
-        </div>
       </div>
     </header>
 
