setup header & made small changes to sidebar.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <title>Martin Klasninovski</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="resources/letter-m-5.png"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="resources/m-logo.png" />
   </head>
 
   <body class="container">
+    <!-- 0. sidebar/site navigation section -->
     <div class="sidebar">
       <a href="#header">
         <svg class="sidebar__icon sidebar__icon--home">
@@ -71,29 +68,47 @@
       </div>
     </div>
 
+    <!-- 1. intro/header section -->
+
     <header class="header" id="header">
+      <div class="intro u-margin-bottom-large">
+        <span class="span-first">Hi,</span>
+        <h1 class="heading--1">
+          I'm <span class="letter-highlight">M</span>artin<span
+            class="letter-highlight letter-highlight-dot"
+            >.</span
+          >
+        </h1>
+        <span class="span-second"
+          >CS student & aspiring fullstack developer</span
+        >
+      </div>
       <div class="header__icon-container">
         <img src="resources/m-logo.png" alt="Site logo" class="header__icon" />
       </div>
-      header
     </header>
 
+    <!-- 2. about me section -->
     <section class="about" id="about">
       about
     </section>
 
+    <!-- 3. skills section -->
     <section class="skills" id="skills">
       skills
     </section>
 
+    <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
       projects
     </section>
 
+    <!-- 5. contact me section -->
     <section class="contact" id="contact">
       contact
     </section>
 
+    <!-- 6. footer/copyright section -->
     <footer class="footer">
       footer
     </footer>
