added button w/ animation to header & minor fixes to header text.

--- a/index.html
+++ b/index.html
@@ -80,12 +80,18 @@
           >
         </h1>
         <span class="span-second"
-          >CS student & aspiring fullstack developer</span
+          >cs student & aspiring full stack developer</span
         >
       </div>
       <div class="header__icon-container">
         <img src="resources/m-logo.png" alt="Site logo" class="header__icon" />
       </div>
+
+      <a href="#about">
+        <svg class="header__arrow">
+          <use xlink:href="resources/sprite2.svg#icon-circle-down"></use>
+        </svg>
+      </a>
     </header>
 
     <!-- 2. about me section -->
