--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <svg class="sidebar__icon sidebar__icon--home sidebar__info--icon">
             <use xlink:href="resources/sprite.svg#icon-home"></use>
           </svg>
-          <p class="sidebar__info--text">to top</p>
+          <p class="sidebar__info--text">top</p>
         </a>
       </div>
 
@@ -77,13 +77,15 @@
 
       <div class="sidebar__sub-container">
         <a href="https://www.github.com/mklaso" target="_blank">
-          <svg class="sidebar__icon sidebar__icon--github">
+          <svg
+            class="sidebar__icon sidebar__icon--github sidebar__sub-container--icon"
+          >
             <use xlink:href="resources/sprite.svg#icon-github"></use>
           </svg>
         </a>
 
         <a href="resources/resume.pdf" target="_blank">
-          <svg class="sidebar__icon">
+          <svg class="sidebar__icon sidebar__sub-container--icon">
             <use xlink:href="resources/sprite.svg#icon-document-text"></use>
           </svg>
         </a>
