--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
 
     <!-- 6. footer/copyright section -->
     <footer class="footer">
-      footer
+      <h4 class="heading--4">
+        &copy; 2020 Martin Klasninovski
+      </h4>
     </footer>
   </body>
 </html>
