added skills section.

--- a/index.html
+++ b/index.html
@@ -120,12 +120,133 @@
 
     <!-- 2. about me section -->
     <section class="about" id="about">
-      about
+      <h2 class="heading--2">about me</h2>
+      <p class="u-margin-top-medium">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
+        aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
+        aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
+        iste modi?
+      </p>
+      <p class="u-margin-top-small">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
+        earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
+        mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
+        alias.
+      </p>
+      <p class="u-margin-top-small">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
+        Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
+        beatae exercitationem ratione earum nam blanditiis, natus accusantium
+        laudantium quasi repudiandae?
+      </p>
     </section>
 
     <!-- 3. skills section -->
     <section class="skills" id="skills">
-      skills
+      <h2 class="heading--2">skillset</h2>
+
+      <div class="skills__whole">
+        <h3 class="heading--3">Languages</h3>
+        <div class="skills__container">
+          <ul class="skills__flex">
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-html5"></use>
+              </svg>
+              <p class="skills__details--text">HTML5</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-css3"></use>
+              </svg>
+              <p class="skills__details--text">CSS3</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-javascript"></use>
+              </svg>
+              <p class="skills__details--text">Javascript</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-python"></use>
+              </svg>
+              <p class="skills__details--text">Python</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-java"></use>
+              </svg>
+              <p class="skills__details--text">Java</p>
+            </li>
+          </ul>
+        </div>
+
+        <h3 class="heading--3">Frameworks & Tools</h3>
+        <div class="skills__container">
+          <ul class="skills__flex">
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-react"></use>
+              </svg>
+              <p class="skills__details--text">React</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-redux"></use>
+              </svg>
+              <p class="skills__details--text">Redux</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-node-dot-js"></use>
+              </svg>
+              <p class="skills__details--text">Node</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-postgresql"></use>
+              </svg>
+              <p class="skills__details--text">PostgreSQL</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-mongodb"></use>
+              </svg>
+              <p class="skills__details--text">MongoDB</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-git"></use>
+              </svg>
+              <p class="skills__details--text">Git</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-linux"></use>
+              </svg>
+              <p class="skills__details--text">Linux</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-postman"></use>
+              </svg>
+              <p class="skills__details--text">Postman</p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- 4. projects i've made section -->
