added heading effects.

--- a/index.html
+++ b/index.html
@@ -146,9 +146,23 @@
       <h2 class="heading--2">skillset</h2>
 
       <div class="skills__whole">
-        <h3 class="heading--3">Languages</h3>
+        <h3 class="heading--3 u-margin-bottom-very-small">Languages</h3>
         <div class="skills__container">
           <ul class="skills__flex">
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-python"></use>
+              </svg>
+              <p class="skills__details--text">Python</p>
+            </li>
+
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-java"></use>
+              </svg>
+              <p class="skills__details--text">Java</p>
+            </li>
+
             <li class="skills__details">
               <svg class="skills__details--icon">
                 <use xlink:href="resources/sprite.svg#icon-html5"></use>
@@ -169,26 +183,20 @@
               </svg>
               <p class="skills__details--text">Javascript</p>
             </li>
-
-            <li class="skills__details">
-              <svg class="skills__details--icon">
-                <use xlink:href="resources/sprite.svg#icon-python"></use>
-              </svg>
-              <p class="skills__details--text">Python</p>
-            </li>
-
-            <li class="skills__details">
-              <svg class="skills__details--icon">
-                <use xlink:href="resources/sprite.svg#icon-java"></use>
-              </svg>
-              <p class="skills__details--text">Java</p>
-            </li>
           </ul>
         </div>
 
-        <h3 class="heading--3">Frameworks & Tools</h3>
+        <h3 class="heading--3 u-margin-bottom-very-small">
+          Frameworks & Tools
+        </h3>
         <div class="skills__container">
           <ul class="skills__flex">
+            <li class="skills__details">
+              <svg class="skills__details--icon">
+                <use xlink:href="resources/sprite.svg#icon-sass"></use>
+              </svg>
+              <p class="skills__details--text">Sass</p>
+            </li>
             <li class="skills__details">
               <svg class="skills__details--icon">
                 <use xlink:href="resources/sprite.svg#icon-react"></use>
@@ -251,12 +259,12 @@
 
     <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
-      projects
+      <h2 class="heading--2">my projects</h2>
     </section>
 
     <!-- 5. contact me section -->
     <section class="contact" id="contact">
-      contact
+      <h2 class="heading--2">contact me</h2>
     </section>
 
     <!-- 6. footer/copyright section -->
