small sidebar bug fix & other small changes.

--- a/index.html
+++ b/index.html
@@ -289,9 +289,11 @@
               </svg>
             </li>
             <li>
-              <svg class="contact__list--icon">
-                <use xlink:href="resources/sprite.svg#icon-github"></use>
-              </svg>
+              <a href="https://www.github.com/mklaso" target="_blank">
+                <svg class="contact__list--icon">
+                  <use xlink:href="resources/sprite.svg#icon-github"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
