added linkedin icons/contact.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
           </svg>
         </a>
 
+        <a
+          href="https://www.linkedin.com/in/martin-klasninovski"
+          target="_blank"
+        >
+          <svg
+            class="sidebar__icon sidebar__icon--linkedin sidebar__sub-container--icon"
+          >
+            <use xlink:href="resources/sprite.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+
         <a href="resources/resume.pdf" target="_blank">
           <svg class="sidebar__icon sidebar__sub-container--icon">
             <use xlink:href="resources/sprite.svg#icon-document-text"></use>
@@ -284,9 +295,14 @@
 
           <ul class="contact__list">
             <li>
-              <svg class="contact__list--icon">
-                <use xlink:href="resources/sprite.svg#icon-linkedin"></use>
-              </svg>
+              <a
+                href="https://www.linkedin.com/in/martin-klasninovski"
+                target="_blank"
+              >
+                <svg class="contact__list--icon">
+                  <use xlink:href="resources/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="https://www.github.com/mklaso" target="_blank">
@@ -334,9 +350,7 @@
 
     <!-- 6. footer/copyright section -->
     <footer class="footer">
-      <h4 class="heading--4">
-        &copy; 2020 Martin Klasninovski
-      </h4>
+      <h4 class="heading--4">&copy; 2020 Martin Klasninovski</h4>
     </footer>
   </body>
 </html>
