finished project details.

--- a/index.html
+++ b/index.html
@@ -266,12 +266,92 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section>               
 
     <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
       <h2 class="heading--2">my projects</h2>
+      <div class="projects-container project-1">
+        <div class="projects-container__pictures"></div>
+        <div class="projects-container__info">
+          <h3 class="heading--3">Weather App</h3>
+          <h5 class="heading--5">A weather forecast GUI that retrieves accurate weather location information from the OpenWeatherMap API. Capable of displaying both a current weather forecast, as well as a 5 day forecast, and supports saving up to 10 locations.</h5>
+          <ul class="projects-container__info--skills">
+              <li class="projects-container__info--skills-item">Java</li>
+              <li class="projects-container__info--skills-item">JavaFX</li>
+              <li class="projects-container__info--skills-item">CSS</li>
+              <li class="projects-container__info--skills-item">SQLite</li>
+          </ul>
+          <ul class="projects-container__info--links">
+            <!-- insert github link / live website link -->
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://github.com/mklaso/weather-app">Github</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       
+
+      <div class="projects-container project-2">
+        <div class="projects-container__info">
+          <h3 class="heading--3">Sujoku</h3>
+          <h5 class="heading--5">A web based sudoku game with a solver that is able to solve even the hardest puzzle in under a second. Capable of generating puzzles of varying difficulties, move hinting, and creating custom sudoku puzzles.</h5>
+          <ul class="projects-container__info--skills">
+              <li class="projects-container__info--skills-item">HTML</li>
+              <li class="projects-container__info--skills-item">CSS</li>
+              <li class="projects-container__info--skills-item">SCSS</li>
+              <li class="projects-container__info--skills-item">Javascript</li>
+          </ul>
+          <ul class="projects-container__info--links">
+            <!-- insert github link / live website link -->
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://github.com/mklaso/sujoku">Github</a>
+            </li>
+          </ul>
+
+        </div>
+        <div class="projects-container__pictures"></div>
+        </div>
+      </div>
+
+      <div class="projects-container project-3">
+        <div class="projects-container__pictures"></div>
+        <div class="projects-container__info">
+          <h3 class="heading--3">Othello</h3>
+          <h5 class="heading--5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quo nulla.</h5>
+          <ul class="projects-container__info--skills">
+              <li class="projects-container__info--skills-item">Java</li>
+              <li class="projects-container__info--skills-item">JavaFX</li>
+          </ul>
+          <ul class="projects-container__info--links">
+            <!-- insert github link / live website link -->
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://github.com/mklaso/weather-app">Github</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="projects-container project-4">
+        <div class="projects-container__info">
+          <h3 class="heading--3">Face Detection</h3>
+          <h5 class="heading--5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quo nulla.</h5>
+          <ul class="projects-container__info--skills">
+              <li class="projects-container__info--skills-item">React</li>
+              <li class="projects-container__info--skills-item">Node</li>
+              <li class="projects-container__info--skills-item">Express</li>
+              <li class="projects-container__info--skills-item">PostgreSQL</li>
+          </ul>
+          <ul class="projects-container__info--links">
+            <!-- insert github link / live website link -->
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://github.com/mklaso/face-recognition">Github</a>
+            </li>
+          </ul>
+        </div>
+        <div class="projects-container__pictures"></div>
+        </div>
+      </div>
     </section>
 
     <!-- 5. contact me section -->
